--- a/src/app/(root)/root-style.module.scss
+++ b/src/app/(root)/root-style.module.scss
@@ -106,3 +106,28 @@
     transform: rotate(480deg);
   }
 }
+
+.postCover {
+  position: absolute;
+  bottom: 0;
+  z-index: 50;
+  width: 100%;
+  height: 450px;
+  left: 0;
+  background: linear-gradient(hsla(0,0%,100%,0),#fff);
+  a {
+    background: linear-gradient(120deg,#9abbf7,#ffbbf4);
+    border: 0;
+    border-radius: 20px 0;
+    bottom: -5px;
+    box-shadow: 2px 2px 10px 0 rgba(255,187,244,.478);
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 10px 24px;
+    position: absolute;
+    right: -5px;
+    transition: box-shadow .25s ease-out,right .25s ease-out;
+    z-index: 2
+  }
+}
