--- a/src/components/PostContent/post-content.module.scss
+++ b/src/components/PostContent/post-content.module.scss
@@ -37,3 +37,19 @@
   color: var(--color-primary);
   transform: scale(1.1);
 }
+
+.partialCover {
+  background: linear-gradient(hsla(0,0%,100%,0),#fff);
+  width: 100%;
+  height: 200px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  > a {
+    margin-bottom: 0.75rem;
+    color: var(--color-primary);
+  }
+}
