feat: 完成页面跳转

--- a/src/components/PartialCodeBlock/post-content.module.scss
+++ b/src/components/PartialCodeBlock/post-content.module.scss
@@ -22,10 +22,11 @@
   position: absolute;
   top: 0.6rem;
   right: 0;
-  > svg {
+  display: flex;
+  > * {
     margin-right: 1.5rem;
   }
-  > svg:hover {
+  > * {
     cursor: pointer;
   }
 }
