fix: 导航栏隐藏时保留当前样式

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -8,15 +8,13 @@
   align-items: center;
   z-index: var(--z-index-top);
 }
+
 .headerTransparentVisible {
   background-color: #00000020;
   color: var(--color-white);
   height: 3.3rem;
 }
-.headerVisible {
+.headerNormalVisible {
   background-color: #92cafa;
   height: 3.3rem;
-}
-.headerHide {
-  height: 0;
 }
