--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
         --color-text-sub: #5c6b72;
         --color-text: #1e3e3f;
         --color-primary: #66afef;
+        --color-error: #ef4444;
         --z-index-top: 100000;
         --z-index-common: 10000;
         --background-color: #f6f8fa;
