feat: 底部 Footer 组件

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
         --color-text: #1e3e3f;
         --color-primary: #66afef;
         --color-error: #ef4444;
+        --border-color: #D9D9D9FF;
         --z-index-top: 100000;
         --z-index-common: 10000;
         --background-color: #f6f8fa;
