fix: toc 高亮部分被遮挡

--- a/src/components/TableOfContent/toc.scss
+++ b/src/components/TableOfContent/toc.scss
@@ -17,6 +17,7 @@
     overflow-x: hidden;
     max-height: 60vh;
     max-width: 300px;
+    padding: 0 4px;
 
     & > * {
         box-sizing: border-box;
