--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,3 +59,22 @@ a:hover {
     background-color: #3392ff2a;
     color: unset;
 }
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px) scale(1.1);
+    }
+
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+/*添加动画*/
+#fade-in {
+    animation-duration: .8s;
+    animation-fill-mode: both;
+    animation-name: fadeIn;
+}
