--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,7 +73,7 @@ a:hover {
 }
 
 /*添加动画*/
-#fade-in {
+.fade-in {
     animation-duration: .8s;
     animation-fill-mode: both;
     animation-name: fadeIn;
