--- a/src/components/post.module.scss
+++ b/src/components/post.module.scss
@@ -58,7 +58,7 @@
     border-radius: 15px;
     box-shadow: 0 2px 12px 0 rgba(0,0,0,.102);
     margin: 25px 0;
-    overflow: hidden;
+    overflow: visible;
   }
 
 
